--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,45 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b
 }
+
+.main-visual {
+  width: 100%;
+  height: 400px;
+  background-image: url(img/mv.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.main-visual > .text {
+  padding: 20px;
+}
+
+.course {
+  width: 840px;
+  margin: 50px auto;
+  /* background-color: pink; */
+}
+
+.course-box1 {
+  padding-bottom: 30px;
+  border-bottom: 1px solid;
+}
+.course-box2 {
+  padding: 30px 0;
+  border-bottom: 1px solid;
+}
+
+.course-box3 {
+  padding: 30px 0;
+  border-bottom: 1px solid;
+}
+
+.course-box4 {
+  padding: 30px 0;
+  border-bottom: 1px solid;
+}
+ .space{
+   width: 50px;
+ }
